--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: AI/ML
+description: Artificial Intelligence & Machine Learning curriculum for NJIT's IEEE student branch.
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
-
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+url: https://astarryknight.github.io/ai-ml
